<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

<ScrollView
    android:id="@+id/scrolling_login"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_login_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="2.0dip"
                android:theme="@style/AppTheme">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null"
                    android:typeface="sans"
                    app:backgroundTint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_login_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="2.0dip"
                android:theme="@style/AppTheme">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5.0dip"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"
                    android:typeface="sans"
                    app:backgroundTint="@android:color/white" />

            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/continue_logged_checkbox"
                android:layout_width="0dp"
                android:textAllCaps="true"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/continue_logged"
                android:textColor="@color/white"
                android:theme="@style/DefaultCheckBoxStyle" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/forgot_password_button"
                android:theme="@style/LoginTheme"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password_button" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7.0dip"
            android:textStyle="bold"
            android:text="@string/connect_button"
            android:theme="@style/AppTheme"
            android:typeface="sans" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:theme="@style/LoginTheme"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7.0dip"
            android:textStyle="bold"
            android:text="@string/create_account_button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_weight="0.45" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/divider_or"
                android:layout_weight="0.1"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:textStyle="italic" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_weight="0.45" />
        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/login_facebook_button"
            android:ems="12" />

    </LinearLayout>

</ScrollView>

</LinearLayout>