<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.0dip"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:paddingBottom="90dp">


            <ImageView
                android:id="@+id/menu_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dots_vertical"
                android:clickable="true"
                android:padding="10dp"
                android:background="?android:selectableItemBackground"
                android:layout_gravity="right" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25.0dip"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25.0dip"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25.0dip"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginRight="25.0dip"
                    android:textColor="@color/colorTextListItem"
                    android:textSize="15.0dip" />

                <TextView
                    android:id="@+id/lbl_categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15.0dip"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginRight="25.0dip"
                    android:text="@string/lbl_category"
                    android:textColor="@color/colorTextListItem"
                    android:textSize="15.0dip" />

                <TextView
                    android:id="@+id/lbl_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15.0dip"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginRight="25.0dip"
                    android:text="@string/lbl_status"
                    android:textColor="@color/colorTextListItem"
                    android:textSize="15.0dip" />

                <TextView
                    android:id="@+id/lbl_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginRight="25.0dip"
                    android:text="@string/lbl_description"
                    android:textColor="@color/colorTextListItem"
                    android:textSize="15.0dip" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginRight="25.0dip"
                    android:layout_marginTop="25.0dip"
                    android:background="@color/colorTextListItem" />

                <TextView
                    android:id="@+id/lbl_foto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginRight="25.0dip"
                    android:layout_marginTop="25.0dip"
                    android:text="@string/lbl_photos"
                    android:textColor="#929292"
                    android:textSize="15.0dip" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackgroundChat"
                    android:paddingBottom="5dp"
                    android:clickable="false"
                    android:paddingTop="5dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/card_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="125.0dip"
                        android:orientation="horizontal" />

                    <TextView
                        android:id="@+id/no_photos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:text="@string/no_photos" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</RelativeLayout>