<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.wellington.find_it.Activity.InsertItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="10.0dip"
                    android:paddingTop="2.0dip"
                    android:theme="@style/AppTheme">

                    <EditText
                        android:id="@+id/name_item"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_item_hint"
                        android:imeActionId="@+id/activity_insert_item"
                        android:imeOptions="normal|actionUnspecified"
                        android:maxLines="1"
                        app:backgroundTint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="10.0dip"
                    android:paddingTop="2.0dip"
                    android:theme="@style/AppTheme">

                    <EditText
                        android:id="@+id/description_item"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description_item_hint"
                        android:imeActionId="@+id/activity_insert_item"
                        android:imeOptions="normal|actionUnspecified"
                        android:maxLines="6"
                        app:backgroundTint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:id="@+id/spin_category_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:layout_marginTop="20.0dip"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip" />

                <TextView
                    style="@style/InputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_item_hint" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:id="@+id/spin_situation_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:layout_marginTop="20.0dip"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip" />

                <TextView
                    style="@style/InputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/situation_item_hint" />

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/choose_photos_item"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_photo"
                android:drawableStart="@drawable/ic_photo"
                android:text="@string/choose_photos_item"
                android:typeface="sans" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/photos_item_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="125.0dip"
                android:orientation="horizontal"
                android:visibility="gone" />

            <fragment
                android:id="@+id/mapFragment"
                android:name="br.com.wellington.find_it.Activity.InsertItemActivity"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="180.0dip"
                android:layout_marginTop="15.0dip" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
